# stocks-machine-learning-dashboard

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
src/: backend.py  feature_store_api.py  ml_model.py
tests/: test_backend.py  test_feature_store_api.py
